added bot and other things

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="call-for-papers.html">Call for Papers</a>
+                        <a class="nav-link" href="call_for_papers.html">Call for Papers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="registration.html">Registration</a>
@@ -628,7 +628,7 @@
                     <i class="fas fa-user-plus"></i>
                     <span>Register Now</span>
                 </a>
-                <a href="call-for-papers.html" class="action-btn">
+                <a href="call_for_papers.html" class="action-btn">
                     <i class="fas fa-paper-plane"></i>
                     <span>Submit Paper</span>
                 </a>
@@ -1178,7 +1178,7 @@
                     <h3>Quick Links</h3>
                     <ul class="list-unstyled">
                         <li><a href="registration.html">Registration</a></li>
-                        <li><a href="call-for-papers.html">Submit Paper</a></li>
+                        <li><a href="call_for_papers.html">Submit Paper</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -1208,5 +1208,9 @@
             once: true
         });
     </script>
+
+    <!-- Botpress WebChat Embed -->
+    <script src="https://cdn.botpress.cloud/webchat/v2.3/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/04/13/04/20250413043827-NXUUY9IL.js"></script>
 </body>
 </html>
