--- a/about.html
+++ b/about.html
@@ -313,7 +313,7 @@
                         <a class="nav-link active" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="call-for-papers.html">Call for Papers</a>
+                        <a class="nav-link" href="call_for_papers.html">Call for Papers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="registration.html">Registration</a>
