--- a/venue.html
+++ b/venue.html
@@ -352,10 +352,10 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="call_for_paper.html">Call for Paper</a>
+                        <a class="nav-link" href="call_for_papers.html">Call for Paper</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="regis.html">Registration</a>
+                        <a class="nav-link" href="registration.html">Registration</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
@@ -368,7 +368,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="subm.html">Submission</a>
+                        <a class="nav-link" href="call_for_papers.html">Submission</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="venue.html">Venue</a>
