change in email

--- a/ag.html
+++ b/ag.html
@@ -204,7 +204,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Contact Us</h3>
-                    <p>Email: ictac@jiit.ac.in</p>
+                    <p>Email: ichshmhssjiit@gmail.com</p>
                     <p>Phone: +91-120-2594100</p>
                 </div>
                 <div class="footer-section">
