--- a/committee.html
+++ b/committee.html
@@ -286,7 +286,7 @@
             <div class="row">
                 <div class="col-md-4 text-center text-md-start">
                     <h5>Contact Us</h5>
-                    <p>Email: ichsm2026@jiit.ac.in</p>
+                    <p>Email: icshmhssjiit@gmail.com</p>
                     <p>Phone: +91-120-2594000</p>
                 </div>
                 <div class="col-md-4 text-center">
