--- a/subm.html
+++ b/subm.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ICTAC Conference</title>
+		<title>ICHSM Conference</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -92,7 +92,7 @@
                                 <header>
                                     <h2>Poster Submission</h2>
                                 </header>
-                                <p>Proposals (abstracts) for poster presentation can be submitted to <a href="mailto:ictac2026@gmail.com" target="_blank">ictac2026@gmail.com</a> as an attachment. Approval/Acceptance of the proposal will be communicated in 10-12 working days.<br>
+                                <p>Proposals (abstracts) for poster presentation can be submitted to <a href="mailto:ICHSM2026@gmail.com" target="_blank">ICHSM2026@gmail.com</a> as an attachment. Approval/Acceptance of the proposal will be communicated in 10-12 working days.<br>
                                 </p>
                                 <a href="guidelines.docx" class="button">Guidelines</a>
                                 <a href="postertemplate.jpg" class="button">Sample poster</a>
@@ -100,7 +100,7 @@
 								<header>
 									<h2>Abstract Submission</h2>
 								</header>
-								<p>Proposals (abstracts) for research paper presentation can be submitted to <a href="mailto:ictac2026@gmail.com" target="_blank">ictac2026@gmail.com</a> as an attachment. Approval/Acceptance of the proposal will be communicated in 10-12 working days.<br>
+								<p>Proposals (abstracts) for research paper presentation can be submitted to <a href="mailto:ICHSM2026@gmail.com" target="_blank">ICHSM2026@gmail.com</a> as an attachment. Approval/Acceptance of the proposal will be communicated in 10-12 working days.<br>
 								</p>
 								<a href="Sample Abstract.docx" class="button">Sample Abstract</a>
 							</section>
