--- a/acc.html
+++ b/acc.html
@@ -179,7 +179,7 @@
                                         <div class="card-body">
                                             <p class="mb-2">
                                                 <i class="fas fa-envelope me-2"></i>
-                                                <a href="mailto:ictac@jiit.ac.in" class="text-decoration-none">ictac@jiit.ac.in</a>
+                                                <a href="mailto:ichshmhssjiit@gmail.com" class="text-decoration-none">ichshmhssjiit@gmail.com</a>
                                             </p>
                                             <p class="mb-0">
                                                 <i class="fas fa-phone me-2"></i>
@@ -202,7 +202,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Contact Us</h3>
-                    <p>Email: ictac@jiit.ac.in</p>
+                    <p>Email: ichshmhssjiit@gmail.com</p>
                     <p>Phone: +91-120-2594100</p>
                 </div>
                 <div class="footer-section">
