--- a/call_for_paper.html
+++ b/call_for_paper.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ICTAC Conference</title>
+		<title>ICHSM Conference</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -91,7 +91,7 @@
 								<header>
 									<h2>Call for paper</h2>
 								</header>
-								<p>ICTAC seeks to deliberate, discuss and channelize a broader vision of One World: Unique Culture - Lets Translate into Unified Universals.
+								<p>ICHSM seeks to deliberate, discuss and channelize a broader vision of One World: Unique Culture - Lets Translate into Unified Universals.
 Accordingly themes have been built around the academic disciplines of literature, Language, History, Geography, Sociology, Linguistics, Arts, Media studies and Technology
 but all embodying the principles of Translating Cultures, Unifying Mankind. Topics of interest for submission include, but are not limited to:
                   </p>
