--- a/comm.html
+++ b/comm.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>ICTAC Conference</title>
+    <title>ICHSM Conference</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
