--- a/contact.html
+++ b/contact.html
@@ -423,7 +423,7 @@
                 <div class="col-lg-6">
                     <div class="contact-form">
                         <h3 class="mb-4">Get in Touch</h3>
-                        <form action="mailto:prashant.gargdpsv@gmail.com" method="post" enctype="text/plain">
+                        <form action="mailto:icshmhssjiit@gmail.com@gmail.com" method="post" enctype="text/plain">
                             <div class="form-group mb-3">
                                 <label class="form-label">Name</label>
                                 <input type="text" class="form-control" name="name" placeholder="Your Name" required>
@@ -444,7 +444,7 @@
                                 <i class="fas fa-paper-plane me-2"></i>Send Message
                             </button>
                         </form>
-                        <p class="mt-3 text-muted small">Your message will be sent to: prashant.gargdpsv@gmail.com</p>
+                        <p class="mt-3 text-muted small">Your message will be sent to: icshmhssjiit@gmail.com@gmail.com</p>
                     </div>
                 </div>
                 
@@ -496,7 +496,7 @@
             <div class="row">
                 <div class="col-md-4 text-center text-md-start">
                     <h5>Contact Us</h5>
-                    <p>Email: ichsm2026@jiit.ac.in</p>
+                    <p>Email: icshmhssjiit@gmail.com</p>
                     <p>Phone: +91-120-2594000</p>
                 </div>
                 <div class="col-md-4 text-center">
