--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Contact Us</h3>
-                    <p>Email: ICHSM2026@jiit.ac.in</p>
+                    <p>Email: icshmhssjiit@gmail.com</p>
                     <p>Phone: +91-120-2594000</p>
                 </div>
                 <div class="footer-section">
