--- a/ks.html
+++ b/ks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keynote Speakers - ICTAC Conference</title>
+    <title>Keynote Speakers - ICHSM Conference</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -155,7 +155,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Contact Us</h3>
-                    <p>Email: ictac@jiit.ac.in</p>
+                    <p>Email: ICHSM@jiit.ac.in</p>
                     <p>Phone: +91-120-2594100</p>
                 </div>
                 <div class="footer-section">
