--- a/regis.html
+++ b/regis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration - ICTAC Conference</title>
+    <title>Registration - ICHSM Conference</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -189,7 +189,7 @@
 
                                 <div class="step">
                                     <h3>Step 3: Registration</h3>
-                                    <p>Send scanned copy of your completed registration form, along with the scanned copy of the proof of payments to <a href="mailto:registerictac@gmail.com" class="text-primary">registerictac@gmail.com</a> of the conference.</p>
+                                    <p>Send scanned copy of your completed registration form, along with the scanned copy of the proof of payments to <a href="mailto:registerICHSM@gmail.com" class="text-primary">registerICHSM@gmail.com</a> of the conference.</p>
                                     
                                     <div class="table-responsive">
                                         <table class="table table-bordered table-hover">
@@ -209,7 +209,7 @@
                                                         Dept of Humanities & Social Sciences, JIIT,<br>
                                                         A-10, Sector-62, Noida, India.<br>
                                                         +91-120-2594382</p>
-                                                        <p>Scanned copy to be mailed to – registerictac@gmail.com</p>
+                                                        <p>Scanned copy to be mailed to – registerICHSM@gmail.com</p>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -245,7 +245,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Contact Us</h3>
-                    <p>Email: ictac@jiit.ac.in</p>
+                    <p>Email: ICHSM@jiit.ac.in</p>
                     <p>Phone: +91-120-2594100</p>
                 </div>
                 <div class="footer-section">
