Email+ Footer update

--- a/ag.html
+++ b/ag.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Author Guidelines - ICTAC Conference</title>
+    <title>Author Guidelines - ICHSM Conference</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -140,14 +140,14 @@
                             <div class="guidelines-section">
                                 <h3 class="mb-3">Points to be noted during submission of Abstract:</h3>
                                 <ol class="list-group list-group-numbered mb-4">
-                                    <li class="list-group-item">Abstracts should be submitted as an attachment to <a href="mailto:ictac2026@gmail.com" class="text-primary">ictac2026@gmail.com</a> with <strong>'Abstract-Title of Sub theme'</strong> typed in the subject field.</li>
+                                    <li class="list-group-item">Abstracts should be submitted as an attachment to <a href="mailto:ICHSM2026@gmail.com" class="text-primary">ICHSM2026@gmail.com</a> with <strong>'Abstract-Title of Sub theme'</strong> typed in the subject field.</li>
                                     <li class="list-group-item">The attachment should include abstract in 250-300 words, name/s of author/s, designation of author/s, affiliation of author/s, and email ID/s.</li>
                                     <li class="list-group-item">Use Microsoft Word, Times New Roman, 12 pts.</li>
                                     <li class="list-group-item">Avoid using advanced word features like header, footnotes etc.</li>
                                 </ol>
 
                                 <div class="alert alert-info mb-4">
-                                    <p>If your abstract is accepted, you will be invited to register for the conference <strong>Translation across Cultures: Dissolving Boundaries-Creating Harmony.</strong> If your abstract is accepted and you have paid the registration fee, you are encouraged to submit the manuscript of 3000-6000 words to <a href="mailto:ictac2026@gmail.com" class="text-primary">ictac2026@gmail.com</a></p>
+                                    <p>If your abstract is accepted, you will be invited to register for the conference <strong>Translation across Cultures: Dissolving Boundaries-Creating Harmony.</strong> If your abstract is accepted and you have paid the registration fee, you are encouraged to submit the manuscript of 3000-6000 words to <a href="mailto:ICHSM2026@gmail.com" class="text-primary">ICHSM2026@gmail.com</a></p>
                                 </div>
 
                                 <div class="journal-section">
