--- a/venue.html
+++ b/venue.html
@@ -13,7 +13,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="" type="image/png">
     <style>
         :root {
             --primary: #1a237e;
@@ -336,7 +336,7 @@
                     <p class="mt-2">Redefining Humanities, Social Sciences, and Management in the Digital Age</p>
                     <p class="date">February 26–28, 2026</p>
                 </div>
-                <img src="2heads.png" alt="Conference Logo" class="img-fluid">
+                <img src="jiit.png" alt="Conference Logo" class="img-fluid">
             </div>
         </div>
     </header>
