--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@
           <div class="col-md-3 text-center mb-4">
             <img src="images/patron1.jpg" alt="Prof. S.C. Saxena" class="img-fluid rounded mb-2 patron-img">
             <div style="font-weight:600;">Prof. S.C. Saxena</div>
-            <div style="font-size:0.95em;">Vice Chancellor, JIIT</div>
+            <div style="font-size:0.95em;">Pro Chancellor, JIIT</div>
           </div>
           <div class="col-md-3 text-center mb-4">
             <img src="images/patron2.jpg" alt="Prof. Bodh Raj Mehta" class="img-fluid rounded mb-2 patron-img">
