--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -643,25 +643,19 @@
                 <h3 class="mb-4">Important Dates</h3>
                 <ul class="important-dates">
                     <li>
-                        <span>Abstract Submission Deadline</span>
-                        <span>December 15, 2025</span>
+                        <span>Abstract Submission</span>
+                        <span>September 31, 2025</span>
                     </li>
                     <li>
-                        <span>Notification of Abstract Acceptance</span>
-                        <span>December 31, 2025</span>
+                        <span>Paper Submission</span>
+                        <span>October 31, 2025</span>
                     </li>
                     <li>
-                        <span>Full Paper Submission</span>
-                        <span>January 15, 2026</span>
+                        <span>Date of Registartion</span>
+                        <span>October 31, 2025</span>
                     </li>
-                    <li>
-                        <span>Review Notification</span>
-                        <span>January 31, 2026</span>
-                    </li>
-                    <li>
-                        <span>Camera Ready Submission</span>
-                        <span>February 10, 2026</span>
-                    </li>
+                    
+                       
                 </ul>
             </div>
         </div>
