--- a/about.html
+++ b/about.html
@@ -369,9 +369,9 @@
                         </h3>
                         <div class="objectives-grid">
                             <div class="objective-item">
-                                <i class="fas fa-users text-primary mb-3"></i>
-                                <h4>Networking</h4>
-                                <p>Connect with leading researchers and experts in your field</p>
+                                <i class="fas fa-book-reader text-primary mb-3"></i>
+                                <h4>Learning & Knowledge Sharing</h4>
+                                <p>Exchange insights and foster continuous learning among participants</p>
                             </div>
                             <div class="objective-item">
                                 <i class="fas fa-lightbulb text-primary mb-3"></i>
