added seo, improved footer, favicons on all pages

--- a/ag.html
+++ b/ag.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="jiit.png" type="image/png">
 </head>
 
 <body>
@@ -199,32 +199,53 @@
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer style="background: #021828; color: #fff; padding: 1.5rem 0 1rem;">
         <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>Contact Us</h3>
-                    <p>Email: ichshmhssjiit@gmail.com</p>
-                    <p>Phone: +91-120-2594100</p>
+            <div class="row footer-content" style="display: flex; flex-wrap: wrap; gap: 1rem;">
+                <div class="col-md-3 col-12 mb-2" style="margin-bottom:0.5rem!important;">
+                    <h3 style="font-weight:600; font-size:1.05rem; margin-bottom:0.7rem;">Organised and Hosted by</h3>
+                    <div style="border-bottom:2px solid #ff4d4d; width:32px; margin-bottom:0.5rem;"></div>
+                    <div style="font-size:0.95rem; line-height:1.4;">Department of Humanities and Social Sciences<br>Jaypee Institute of Information Technology<br>Noida - 62, Uttar Pradesh, India</div>
                 </div>
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <ul class="list-unstyled">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="call_for_paper.html">Call for Paper</a></li>
-                        <li><a href="regis.html">Registration</a></li>
+                <div class="col-md-3 col-12 mb-2" style="margin-bottom:0.5rem!important;">
+                    <h3 style="font-weight:600; font-size:1.05rem; margin-bottom:0.7rem;">Contact Us</h3>
+                    <div style="border-bottom:2px solid #ff4d4d; width:32px; margin-bottom:0.5rem;"></div>
+                    <div style="font-size:0.95rem;"><i class="fas fa-envelope"></i> icshmhssjiit@gmail.com</div>
+                    <div class="mt-1" style="font-size:0.95rem;"><i class="fas fa-phone"></i> +91-120-2594000</div>
+                </div>
+                <div class="col-md-3 col-12 mb-2" style="margin-bottom:0.5rem!important;">
+                    <h3 style="font-weight:600; font-size:1.05rem; margin-bottom:0.7rem;">Quick Links</h3>
+                    <div style="border-bottom:2px solid #ff4d4d; width:32px; margin-bottom:0.5rem;"></div>
+                    <ul class="list-unstyled" style="padding-left:0; font-size:0.95rem; margin-bottom:0;">
+                        <li><a href="index.html" style="color:#fff; text-decoration:none;">Home</a></li>
+                        <li><a href="registration.html" style="color:#fff; text-decoration:none;">Registration</a></li>
+                        <li><a href="call_for_papers.html" style="color:#fff; text-decoration:none;">Submit Paper</a></li>
+                        <li><a href="contact.html" style="color:#fff; text-decoration:none;">Contact</a></li>
+                        <li><a href="venue.html" style="color:#fff; text-decoration:none;">Venue</a></li>
                     </ul>
                 </div>
-                <div class="footer-section">
-                    <h3>Follow Us</h3>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                <div class="col-md-3 col-12 mb-2" style="margin-bottom:0.5rem!important;">
+                    <h3 style="font-weight:600; font-size:1.05rem; margin-bottom:0.7rem;">Follow Us</h3>
+                    <div style="border-bottom:2px solid #ff4d4d; width:32px; margin-bottom:0.5rem;"></div>
+                    <div class="social-links" style="display:flex; gap:0.5rem;">
+                        <a href="#" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-twitter"></i></a>
+                        <a href="#" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
-        </div>
+<hr style="border-top:1px solid #1976d2; margin:1.2rem 0 0.7rem; opacity:0.3;">
+<div class="text-center" style="font-size:0.98rem;">
+    <p style="margin-bottom:0.1rem;">&copy; 2026 ICHSM - All Rights Reserved</p>
+    <p class="developer-credit" style="color:#f6f9fa; font-size:0.92rem; margin-top:0.1rem;">
+        Designed and Developed by 
+        <a href="https://www.linkedin.com/in/prashant-kumar-garg" target="_blank" style="color:#f6f9fa; text-decoration:underline;">
+            Prashant Garg
+        </a>
+    </p>
+</div>
+
     </footer>
 
     <!-- Bootstrap JS -->
