--- a/pb.html
+++ b/pb.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="jiit.png" type="image/png">
     <title>Publications - ICHSM 2026</title>
     
     <!-- Bootstrap CSS -->
@@ -353,35 +354,53 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white py-4">
-            <div class="container">
-            <div class="row">
-                <div class="col-md-4 text-center text-md-start">
-                    <h5>Contact Us</h5>
-                    <p>Email: icshmhssjiit@gmail.com</p>
-                    <p>Phone: +91-120-2594000</p>
+    <footer style="background: #021828; color: #fff; padding: 1.5rem 0 1rem;">
+        <div class="container">
+            <div class="row footer-content" style="display: flex; flex-wrap: wrap; gap: 1rem;">
+                <div class="col-md-3 col-12 mb-2" style="margin-bottom:0.5rem!important;">
+                    <h3 style="font-weight:600; font-size:1.05rem; margin-bottom:0.7rem;">Organised and Hosted by</h3>
+                    <div style="border-bottom:2px solid #ff4d4d; width:32px; margin-bottom:0.5rem;"></div>
+                    <div style="font-size:0.95rem; line-height:1.4;">Department of Humanities and Social Sciences<br>Jaypee Institute of Information Technology<br>Noida - 62, Uttar Pradesh, India</div>
                 </div>
-                <div class="col-md-4 text-center">
-                    <h5>Quick Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="index.html" class="text-white">Home</a></li>
-                        <li><a href="registration.html" class="text-white">Registration</a></li>
-                        <li><a href="contact.html" class="text-white">Contact</a></li>
+                <div class="col-md-3 col-12 mb-2" style="margin-bottom:0.5rem!important;">
+                    <h3 style="font-weight:600; font-size:1.05rem; margin-bottom:0.7rem;">Contact Us</h3>
+                    <div style="border-bottom:2px solid #ff4d4d; width:32px; margin-bottom:0.5rem;"></div>
+                    <div style="font-size:0.95rem;"><i class="fas fa-envelope"></i> icshmhssjiit@gmail.com</div>
+                    <div class="mt-1" style="font-size:0.95rem;"><i class="fas fa-phone"></i> +91-120-2594000</div>
+                </div>
+                <div class="col-md-3 col-12 mb-2" style="margin-bottom:0.5rem!important;">
+                    <h3 style="font-weight:600; font-size:1.05rem; margin-bottom:0.7rem;">Quick Links</h3>
+                    <div style="border-bottom:2px solid #ff4d4d; width:32px; margin-bottom:0.5rem;"></div>
+                    <ul class="list-unstyled" style="padding-left:0; font-size:0.95rem; margin-bottom:0;">
+                        <li><a href="index.html" style="color:#fff; text-decoration:none;">Home</a></li>
+                        <li><a href="registration.html" style="color:#fff; text-decoration:none;">Registration</a></li>
+                        <li><a href="call_for_papers.html" style="color:#fff; text-decoration:none;">Submit Paper</a></li>
+                        <li><a href="contact.html" style="color:#fff; text-decoration:none;">Contact</a></li>
+                        <li><a href="venue.html" style="color:#fff; text-decoration:none;">Venue</a></li>
                     </ul>
                 </div>
-                <div class="col-md-4 text-center text-md-end">
-                    <h5>Follow Us</h5>
-                    <div class="social-links">
-                        <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
+                <div class="col-md-3 col-12 mb-2" style="margin-bottom:0.5rem!important;">
+                    <h3 style="font-weight:600; font-size:1.05rem; margin-bottom:0.7rem;">Follow Us</h3>
+                    <div style="border-bottom:2px solid #ff4d4d; width:32px; margin-bottom:0.5rem;"></div>
+                    <div class="social-links" style="display:flex; gap:0.5rem;">
+                        <a href="#" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-twitter"></i></a>
+                        <a href="#" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" style="width:32px; height:32px; border-radius:50%; background:rgba(255,255,255,0.1); display:flex; align-items:center; justify-content:center; color:#fff; font-size:1rem;"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
-            <div class="text-center mt-4">
-                <p class="mb-0">&copy; 2026 ICHSM - All Rights Reserved</p>
-            </div>
-        </div>
+<hr style="border-top:1px solid #1976d2; margin:1.2rem 0 0.7rem; opacity:0.3;">
+<div class="text-center" style="font-size:0.98rem;">
+    <p style="margin-bottom:0.1rem;">&copy; 2026 ICHSM - All Rights Reserved</p>
+    <p class="developer-credit" style="color:#f6f9fa; font-size:0.92rem; margin-top:0.1rem;">
+        Designed and Developed by 
+        <a href="https://www.linkedin.com/in/prashant-kumar-garg" target="_blank" style="color:#f6f9fa; text-decoration:underline;">
+            Prashant Garg
+        </a>
+    </p>
+</div>
+
     </footer>
 
     <!-- Bootstrap JS -->
@@ -396,3 +415,4 @@
     </script>
 </body>
 </html>
+
