--- a/ext.html
+++ b/ext.html
@@ -7,10 +7,12 @@
 <html>
 
 <head>
-    <title>ICHSM Conference</title>
+    <title>External Committee - ICHSM 2026</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="jiit.png" type="image/png">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
     <!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -127,7 +129,7 @@
                                 <br>Co-Director of the Center for Humanities and Digital Research<br>University of Central Florida </p>
                              <span style="font-weight: bold; font-size: 20px; color: black;">Prof. Miguel Lopez Astorga</span>
                             <br>
-                            <p style=" margin-top: 11px;">Institute of Humanistic Studies “Juan Ignacio Molina”<br> University of Talca<br> Chile</p>
+                            <p style=" margin-top: 11px;">Institute of Humanistic Studies "Juan Ignacio Molina"<br> University of Talca<br> Chile</p>
                             <span style="font-weight: bold; font-size: 20px; color: black;">Prof. Nibir Ghosh</span>
                             <br>
                             <p style=" margin-top: 11px;">UGC Professor Emeritus
