--- a/insti.html
+++ b/insti.html
@@ -7,7 +7,9 @@
 <html>
 
 <head>
-    <title>ICHSM Conference</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="jiit.png" type="image/png">
+    <title>Institutional Committee - ICHSM 2026</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
