--- a/venue.html
+++ b/venue.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="jiit.png" type="image/png">
     <title>Venue - ICHSM 2026</title>
     
     <!-- Bootstrap CSS -->
@@ -13,7 +14,6 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="icon" href="" type="image/png">
     <style>
         :root {
             --primary: #1a237e;
@@ -417,7 +417,7 @@
                                 <i class="fas fa-envelope"></i>
                                 <div>
                                     <strong>Email:</strong><br>
-                                    conference@jiit.ac.in
+                                    icshmhssjiit@gmail.com
                             </div>
                             </div>
                         </div>
@@ -531,7 +531,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Contact Us</h3>
-                    <p>Email: ICHSM@jiit.ac.in</p>
+                    <p>Email: icshmhssjiit@gmail.com</p>
                     <p>Phone: +91-120-2594100</p>
                 </div>
                 <div class="footer-section">
